<resources>
    <string name="app_name">MyKFCApp</string>
    <string name="entry">Войти</string>
    <string name="forgot_your_password">Забыли пароль?</string>
    <string name="password">Пароль</string>
    <string name="email">Email</string>
    <string name="registration">Регистрация</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="repeat">Повторите пароль</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="categories">Категории</string>
    <string name="favourites">Избранное</string>
    <string name="search">Поиск</string>
    <string name="profile">Профиль</string>
    <string name="description">Lorem ipsum dolor sit amet,consectetur adipiscing elit, sed do eiusmod tempor incididund ut labore et dolore</string>
    <string name="updated">Обновлено: </string>
    <string name="date1">22 августа 2020</string>
    <string name="date2">08 июня 2020</string>
    <string name="date3">17 марта 2020</string>
    <string name="files">Файлов:</string>
    <string name="quantity1">8</string>
    <string name="quantity2">2</string>
    <string name="quantity3">5</string>
    <string name="item_name">Твистеры</string>
    <string name="item_name2">Напитки</string>
    <string name="item_name3">Баскеты</string>
    <string name="doc_description">Working together with @Triyandi Saputra doing an exploration about KFC delivery app.More screen and animation coming</string>
    <string name="strips">Стрипсы</string>
    <string name="party_basket">Пати баскет</string>
    <string name="basket24">Баскет 24</string>
    <string name="basket_duet">Баскет дует</string>
    <string name="sanders_basket">Сандерс баскет</string>
    <string name="btn_trash_bin"></string>
    <string name="btn_categories"></string>
    <string name="btn_favourites"></string>
    <string name="btn_search"></string>
    <string name="btn_profile"></string>
    <string name="btn_pdf"></string>
    <string name="btn_video"></string>
    <string name="btn_link"></string>
    <string name="txt_search">Поиск...</string>
    <string name="txt_privacy_policy">1. Термин "личная информация", используемый в настоящем документе           ваваипвап      впвепвепчевп       врервкереае  врвсспс вер ерыкерре веркрвкрв ыкпск уеркеареркервмрвкр ервкнрвнрвмкр кермнру6рк акркар 2. </string>
    <string name="btn_question"></string>

</resources>