<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btn_categories"
                style="@style/TVFavLight.XL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_categories" />

            <TextView
                android:id="@+id/txt_categories"
                style="@style/TVReg.M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categories" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btn_favourites"
                style="@style/TVFavLight.XL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_favourites" />

            <TextView
                android:id="@+id/txt_favourites"
                style="@style/TVReg.M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favourites" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btn_search"
                style="@style/TVFavLight.XL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_search" />

            <TextView
                android:id="@+id/txt_search"
                style="@style/TVReg.M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btn_profile"
                style="@style/TVFavLight.XL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_profile" />

            <TextView
                android:id="@+id/txt_profile"
                style="@style/TVReg.M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile" />

        </LinearLayout>
    </LinearLayout>
</layout>