<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/kfc6"
            android:scaleType="centerCrop"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/item_doc_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/exo_bold"
                android:text="@string/strips"
                android:textColor="@color/gray5"
                android:textSize="@dimen/size_xl"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtPdf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="8dp"
                style="@style/TVFavLightRed.M"
                android:text="@string/btn_pdf"/>

            <TextView
                android:id="@+id/txtVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/txtPdf"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="8dp"
                style="@style/TVFavLightRed.M"
                android:text="@string/btn_video"/>

            <TextView
                android:id="@+id/txtLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/txtVideo"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="8dp"
                style="@style/TVFavLightRed.M"
                android:text="@string/btn_link"/>

            <TextView
                android:id="@+id/doc_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/exo_reg"
                android:text="@string/doc_description"
                android:textColor="@color/gray2"
                android:textSize="@dimen/size_m"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_doc_name" />

            <TextView
                android:id="@+id/doc_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date1"
                android:textColor="@color/gray5"
                android:fontFamily="@font/exo_bold"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/doc_description" />

            <TextView
                android:id="@+id/txt_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updated"
                android:textColor="@color/gray5"
                android:fontFamily="@font/exo_bold"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toStartOf="@+id/doc_update"
                app:layout_constraintTop_toBottomOf="@+id/doc_description" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>